--- a/page2.html
+++ b/page2.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <title>Page 2</title>
   </head>
-  <body style="background-color: pink;">
+  <body>
 
     <!-- define the wrapper and the container -->
     <div data-barba="wrapper">
-      <div data-barba="container" data-barba-namespace="page-b">
+      <div data-barba="container" data-barba-namespace="page-b"  style="background-color: pink;">
         <h1>This is page 2</h1>
       </div>
     </div>
