--- a/page2.html
+++ b/page2.html
@@ -3,12 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>Page 2</title>
+    <style>
+.pink {
+  background-color: pink;
+}
+    </style>
   </head>
   <body>
 
     <!-- define the wrapper and the container -->
     <div data-barba="wrapper">
-      <div data-barba="container" data-barba-namespace="page-b"  style="background-color: pink;">
+      <div data-barba="container" data-barba-namespace="page-b" id="pink">
         <h1>This is page 2</h1>
       </div>
     </div>
