--- a/page2.html
+++ b/page2.html
@@ -13,9 +13,11 @@
 
     <!-- define the wrapper and the container -->
     <div data-barba="wrapper">
-      <div data-barba="container" data-barba-namespace="page-b" id="pink">
+      <div data-barba="container" data-barba-namespace="page-b">
+        <div class="pink">
         <h1>This is page 2</h1>
       </div>
+    </div>
     </div>
 
     <!-- load barba (UMD version) -->
