--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>BarbaJS legacy example</title>
+    <link rel="stylesheet" href="mystyle.css">
   </head>
   <body>
 
