--- a/page2.html
+++ b/page2.html
@@ -3,11 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>Page 2</title>
-    <style>
-.pink {
-  background-color: pink;
-}
-    </style>
   </head>
   <body>
 
@@ -16,6 +11,7 @@
       <div data-barba="container" data-barba-namespace="page-b">
         <div class="pink">
         <h1>This is page 2</h1>
+        <a href="index.html">Back to Home</a>
       </div>
     </div>
     </div>
