--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
     <!-- define the wrapper and the container -->
     <div data-barba="wrapper">
       <div data-barba="container" data-barba-namespace="page-a">
-        <h1>Home</h1>
-        <a href="page2.html">Page 2</a>
-      </div>
+        <div class="content">
+          <div class="blue">
+            <h1>Home</h1>
+            <a href="page2.html">Page 2</a>
+                  </div>
+          </div>
+        </div>
     </div>
 
     <!-- load barba (UMD version) -->
