--- a/page2.html
+++ b/page2.html
@@ -9,9 +9,11 @@
     <!-- define the wrapper and the container -->
     <div data-barba="wrapper">
       <div data-barba="container" data-barba-namespace="page-b">
+        <div class="content">
         <div class="pink">
         <h1>This is page 2</h1>
         <a href="index.html">Back to Home</a>
+      </div>
       </div>
     </div>
     </div>
