--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>BarbaJS legacy example</title>
+    <title>Home</title>
     <link rel="stylesheet" href="mystyle.css">
   </head>
   <body>
