changing gsap effect

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
           name: 'opacity-transition',
           leave(data) {
             return gsap.to(data.current.container, {
-              opacity: 0
+              ease: "power2.inOut"
             });
           },
           enter(data) {
             return gsap.from(data.next.container, {
-              opacity: 0
+              ease: "power2.inOut"
             });
           }
         }]
