--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
           name: 'opacity-transition',
           leave(data) {
             return gsap.to(data.current.container, {
-              ease: "power2.inOut"
+              rotation: 27, x: 100, duration: 2, ease: "elastic"
             });
           },
           enter(data) {
             return gsap.from(data.next.container, {
-              ease: "power2.inOut"
+              rotation: 360, x: 100, duration: 2, ease: "elastic"
             });
           }
         }]
